<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="Binding_MainActivity" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        tools:context=".MainActivity">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btnSampleData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_sample_data" />

            <TextView
                android:id="@+id/txtSampleData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/text_sample_data"
                android:textAlignment="gravity" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/btnJsonData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_json_data" />

            <TextView
                android:id="@+id/txtJsonData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/text_json_data"
                android:textAlignment="gravity" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/btnSQLiteData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_sqlite_data" />

            <TextView
                android:id="@+id/txtSQLiteData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/txt_sqlite_data"
                android:textAlignment="gravity" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/btnSQLiteRoom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_sqlite_data_with_room" />

            <TextView
                android:id="@+id/txtSQLiteRoom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/txt_sqlite_room"
                android:textAlignment="gravity" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>